# xsec_analyzer

./: .gitignore  CMakeLists.txt  FiducialVolume.hh  LinkDef.h  LinkDef.hh  Makefile  NuMICC1e  \  analyzer.C  create_all_nuwro_fakedata_lists.sh  file_properties.txt  generate_all_ntuples4.sh  generate_all_ntuples_EXT.sh  generate_all_ntuples_Run1.sh  generate_all_ntuples_Run2.sh  generate_all_ntuples_Run3.sh  generate_all_ntuples_Run4.sh  generate_all_ntuples_Run5.sh  instructions_numi.txt  legend_plot.py  prestage_nuwro_fakedata.sh  pyproject.toml  q  rename_files.sh  setup_xsec_analyzer.sh
.github/workflows/: docs.yml
Analyzer/: Makefile  ProcessNTuples.C  RunScript.sh  analyzer.C
Analyzer/AnalysisEvent/: AnalysisEvent.cpp  AnalysisEvent.h  Makefile
Analyzer/STV_Tools/: Makefile  STV_Tools.cxx  STV_Tools.h
Analyzer/Selections/: CC1mu1p0pi.cpp  CC1mu1p0pi.h  CC1mu2p0pi.cpp  CC1mu2p0pi.h  CC1muNp0pi.cpp  CC1muNp0pi.h  Makefile  SelectionBase.cpp  SelectionBase.h  SelectionFactory.h
Analyzer/Utils/: Branches.h  Constants.h  EventCategory.hh  FiducialVolume.hh  Functions.h  TreeComparer.C  TreeUtils.hh
Configs/: file_properties.txt  nuwro_file_properties.txt  tutorial_bin_config.txt  xsec_config.txt
Documentation/internal_note/: slice_dump.C  smear_matrix.C
Macros/: TreeComparer.C  tutorial_slice_plots.C
NTupleProcessing/: Makefile  ProcessNTuples.C
Plotting/: Makefile  Slice_Plots.C
Scripts/: FullAnalysis.sh  PlotSlices.sh  ReprocessNTuples.sh  Unfolder.sh  UniverseMaker.sh  UniverseMakerExampleRunscript.sh
Selections/: CC1mu1p0pi.cpp  CC1mu2p0pi.cpp  CC1muNp0pi.cpp  CC1muNp0pi.h  DummySelection.cpp  Makefile  SelectionBase.cpp  SelectionBase.h  SelectionFactory.cpp  SelectionFactory.h
Unfolding/: Makefile  Unfolder.C  Unfolding.C  test_unfolding.C  test_unfolding_refactor.C
UniverseMaker/: Makefile  Runscript.sh  dans_shortfiles.txt  files.txt  tutorial_bin_config.txt  univmake.C
UniverseMaker/Utils/: SystematicsCalculator.hh  UniverseMaker.hh  WeightHandler.hh
Utils/: Makefile
Utils/Includes/: Branches.h  Constants.h  CrossSectionExtractor.hh  EventCategory.hh  FiducialVolume.hh  FilePropertiesManager.hh  Functions.h  MatrixUtils.hh  NormShapeCovMatrix.hh  PGFPlotsDumpUtils.hh  SystematicsCalculator.hh
Utils/STV_Tools/: Makefile  STV_Tools.cxx  STV_Tools.h
cafana/: CMakeLists.txt  README.md  xsec_analyzer.C  xsec_analyzer_C_ACLiC_dict.cxx_tmp_1208
cafana/include/: analysis.h  preprocessor.h  utilities.h
configs/: CC1muNnXp0pi_file_properties.txt  CC1muNnXp0pi_files_to_process.txt  CC1muNnXp0pi_slice_config.txt  CC1muNnXp0pi_systcalc.conf  CC1muNnXp0pi_systcalc_unfold_fd.conf  CC1muNnXp0pi_systcalc_unfold_fd_tester.conf  CC1muNnXp0pi_xsec_config.txt  CC1muNp0piNn_file_properties.txt  CC1muNp0piNn_file_properties_constant_scale.txt  CC1muNp0piNn_systcalc_unfold_fd.conf  CC1muNp1pi_bin_config.txt  CC1muNp1pi_sideband_bin_config.txt  CC1muNp1pi_singlebin.txt  CC1muNp1pi_singleslice.txt  CC1muNp1pi_slice_config.txt  CC1muNp1pi_xsecbin_config.txt  CC1muNp1pi_xsecslice_config.txt  JOINTCC0pi_bin_config.txt  JOINTCC0pi_slice_config.txt  SBND_CC1muX_bin_config.txt  SBND_CC1muX_slice_config_good.txt  SBND_CC1muX_slice_config_overflow.txt  TO_USE_FOR_RESULT_file_properties.txt  file_properties.txt  file_properties_20241121.txt  file_properties_closure.txt  file_properties_closure2.txt  file_properties_cthorpe_1.txt  file_properties_cthorpe_current.txt  file_properties_numi.txt  file_properties_nuwro.txt  files_to_process.txt  files_to_process_all_newPeLEE.txt  files_to_process_cthorpe.txt  files_to_process_numi.txt  mcc9_file_properties.txt  nuecc_bin_config.txt  nuecc_bin_config_totalOnly.txt  nuecc_slice_config.txt  nuecc_slice_config_totalOnly.txt  (+20 more)
configs/bin_configs/: CC1muNnXp0pi_cos_alpha_3D_bin_config.txt  CC1muNnXp0pi_cos_alpha_3D_slice_config.txt  CC1muNnXp0pi_cos_alpha_bin_config.txt  CC1muNnXp0pi_cos_alpha_slice_config.txt  CC1muNnXp0pi_pmiss_3D_bin_config.txt  CC1muNnXp0pi_pmiss_bin_config.txt  CC1muNnXp0pi_pmiss_slice_config.txt  CC1muNp0piNn_bin_config.txt  CC1muNp0piNn_bin_config_single_bin.txt  CC1muNp0piNn_cos_alpha_bin_config.txt  CC1muNp0piNn_cos_alpha_delta_pt_bin_config.txt  CC1muNp0piNn_cos_alpha_delta_pt_slice_config.txt  CC1muNp0piNn_slice_config.txt  CC1muNp0piNn_slice_config_single_bin.txt
docs/source/: adding-selection.rst  conf.py  configuration-files.rst  examples.rst  executables.rst  glossary.rst  index.rst
include/XSecAnalyzer/: AnalysisEvent.hh  Array.hh  Branches.hh  Constants.hh  CrossSectionExtractor.hh  DAgostiniUnfolder.hh  DirectoryMap.hh  EventCategoryInterpreter.hh  FiducialVolume.hh  FilePropertiesManager.hh  Functions.hh  GKITools.hh  HistUtils.hh  KICalculator.hh  MCC9SystematicsCalculator.hh  MatrixUtils.hh  PlotUtils.hh  QuickPlotter.hh  STVTools.hh  STV_Tools.hh  SliceBinning.hh  SliceHistogram.hh  StandaloneUnfolding.hh  SystematicsCalculator.hh  TreeHandler.hh  TreeMap.hh  TreeUtils.hh  TruthSystematicsCalculator.hh  Unfolder.hh  UniverseMaker.hh  WeightHandler.hh  WienerSVDUnfolder.hh  neutron_stepwise_reweight.hh
macros/: make_config_all.C  norm.C  plots.C  qplots.C  res_plots.C
macros/CC1piNp/: GKIResStudy_golden.C  GoldenPionDependency.C  PlotAllGKIResolutions.C  ProtonMomStudy.C  count_signal.C  effpur_cutflow.C  event_level_plots.C  pfparticle_plots.C
macros/internal_note/: slice_dump.C  smear_matrix.C
notebooks/: quick_plots.ipynb
python/: README.md  init.sh  post.ipynb  requirements.txt  setup.sh  uni.ipynb  xsec.ipynb
scripts/: FullAnalysis.sh  Liang_ReprocessNTuples.sh  PlotSlices.sh  ReprocessNTuples.sh  Unfolder.sh  UniverseMaker.sh  cnguyen_ReprocessNTuples.sh
src/app/: PlotOneBinXSec.C  ProcessNTuples.C  Slice_Plots.C  Unfolder.C  UnfolderNuMI.C  binscheme.C  setup_xsec_analyzer.C  standalone_unfold.C  univmake.C  xsnotebook  xsroot
src/binning/: BinSchemeFactory.cxx  BinSchemeFactory.dylib  CC1muNp1piBinScheme.cxx  CCXp0piBinScheme.cxx  JOINTCC0Pi_BinScheme.cxx  SBND_CC1muX_BinScheme.cxx  TutorialBinScheme.cxx
src/utils/: GKITools.cxx  (+21 more)
unf/: standalone_unf_conf.txt
(+86 files in other folders)
